--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,26 +1,32 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/"><span>Bookers</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
             <li>
               <%= link_to root_path, class:"nav-link text-light" do%>
-                <i class="fa-solid fa-house"></i> Home
+                <i class="fa-solid fa-house"></i>Home
               <% end %>
             </li>
             <li>
-                <!-- ログイン後のUsersリンクは未実装です。自分で調べて実装してみましょう -->
+            <%= link_to user_path(current_user) , class:"nav-link text-light" do%>
+              <i class="fa-solid fa-users"></i> Users
+            <% end %>
             </li>
             <li>
-              <!-- ログイン後のBooksリンクは未実装です。自分で調べて実装してみましょう -->
+            <%= link_to user_path(current_user) , class:"nav-link text-light" do%>
+              <i class="fa-solid fa-book-open"></i> Books
+            <% end %>
             </li>
             <li>
-                <!-- ログイン後のLog outリンクは未実装です。自分で調べて実装してみましょう -->
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa-solid fa-right-from-bracket"></i> Log out
+            <% end %>
             </li>
           <% else %>
             <li>
