--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <img scr>
+      <table class="table">
+      </table>
+      <div class="row">
+        <a class="btn btn-outline-secondary" href="">
+          <i class="fa-solid fa-user-gear"></i>
+        </a>
+      </div>
+      <h2 class="mt-3">New book</h2>
+      
+  </div>
+</div>
