--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,12 @@
         </a>
       </div>
       <h2 class="mt-3">New book</h2>
-      
+      <%= form_with model: @book do |f| %>
+        <label for"book title">Title</label>
+        <%= f.text_field :title %>
+        <label for"book body">Opinion</label>
+        <%= f.text_area :body %>
+        <%= f.submit 'Create Book' class: "btn btn-sm btn-primary"%>
+      <% end %>
   </div>
 </div>
