--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
             <% end %>
             </li>
             <li>
-            <%= link_to destroy_user_session_path, method: :delete do %>
+            <%= link_to destroy_user_session_path, method: :delete, class:"nav-link text-light" do %>
               <i class="fa-solid fa-right-from-bracket"></i> Log out
             <% end %>
             </li>
