--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,5 +18,22 @@
         <%= f.text_area :body %>
         <%= f.submit 'Create Book' class: "btn btn-sm btn-primary"%>
       <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th>title</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
   </div>
+  
 </div>
