--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,8 +1,31 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <h2>New book</h2>
-      
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+        <label for"book title">Title</label>
+        <%= f.text_field :title %>
+        <label for"book body">Opinion</label>
+        <%= f.text_area :body %>
+        <%= f.submit 'Create Book', class: "btn btn-sm btn-primary"%>
+      <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>users</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th>title</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+  </div>
     </div>
   </div>
 </div>
