--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,19 +2,19 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/"><span>Bookers</span></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
             <li>
-              <%= link_to root_path, class:"nav-link text-light" do%>
-                <i class="fa-solid fa-house"></i>Home
+            <%= link_to user_path(current_user) , class:"nav-link text-light" do%>
+              <i class="fa-solid fa-house"></i> Home
               <% end %>
             </li>
             <li>
-            <%= link_to user_path(current_user) , class:"nav-link text-light" do%>
+            <%= link_to users_path , class:"nav-link text-light" do%>
               <i class="fa-solid fa-users"></i> Users
             <% end %>
             </li>
