--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
@@ -10,30 +10,29 @@
           <i class="fa-solid fa-user-gear"></i>
         </a>
       </div>
+
       <h2 class="mt-3">New book</h2>
       <%= form_with model: @book do |f| %>
-        <label for"book title">Title</label>
-        <%= f.text_field :title %>
-        <label for"book body">Opinion</label>
+        <label for"book title">Title</label><br>
+        <%= f.text_field :title %><br>
+        <label for"book body">Opinion</label><br>
         <%= f.text_area :body %>
-        <%= f.submit 'Create Book' class: "btn btn-sm btn-primary"%>
+        <%= f.submit 'Create Book', class: "btn btn-sm btn-success"%>
       <% end %>
     </div>
-    <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
-      <table>
+    <div class='col-md-8 offset-md-1'>
+      <h2>User</h2>
+      <table class='table table-hover table-inverse'>
         <thead>
           <tr>
+            <th></th>
             <th>image</th>
             <th>name</th>
-            <th>title</th>
             <th colspan="3"></th>
           </tr>
         </thead>
-        <tbody>
-        </tbody>
+        <tbody></tbody>
       </table>
     </div>
-  </div>
-  
+	</div>
 </div>
