--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,9 +20,15 @@
 	    <div class='row'>
 	      <!-- 編集リンクが未実装 -->
 	    </div>
-	    <h2 class="mt-3">New book</h2>
-	    <!-- form_withを用いて新規投稿フォームを作成しましょう。 -->
-	  </div>
+			<h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+        <label for"book title">Title</label><br>
+        <%= f.text_field :title %><br>
+        <label for"book body">Opinion</label><br>
+        <%= f.text_area :body %>
+        <%= f.submit 'Create Book', class: "btn btn-sm btn-success"%>
+      <% end %>
+    </div>
 	  <div class='col-md-8 offset-md-1'>
 	    <h2>Books</h2>
 	    <!-- 投稿した書籍一覧表示を作成しましょう。 -->
