--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,16 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
-        <label for"book title">Title</label>
-        <%= f.text_field :title %>
-        <label for"book body">Opinion</label>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book', class: "btn btn-sm btn-primary"%>
-      <% end %>
-    </div>
-    <div class="col-md-8 offset-md-1">
+    <%= render 'shared/user_info' %>
+    <div class="offset-md-3 col-md-8 offset-md-1">
       <h2>users</h2>
       <table>
         <thead>
