--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div class='container px-5 px-sm-0'>
+	<div class='row'>
+    <%= render 'shared/user_info' %>
+		<div class='col-md-8 offset-md-1'>
+    <h2>Books</h2>
+      <table class='table'>
+        <tbody>
+          <tr>
+            <td></td>
+            <!-- ユーザー画像⁺改行してUserリンク -->
+            <td></td>
+            <!-- タイトル→showへのリンク -->
+            <td></td>
+            <!-- opinion -->
+            <td></td>
+            <!-- edit -->
+            <td></td>
+            <!-- delete -->
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
