--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
             <% end %>
             </li>
             <li>
-            <%= link_to user_path(current_user) , class:"nav-link text-light" do%>
+            <%= link_to books_path , class:"nav-link text-light" do%>
               <i class="fa-solid fa-book-open"></i> Books
             <% end %>
             </li>
