--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,8 @@
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <img scr>
-      <table class="table">
-      </table>
-      <div class="row">
-        <a class="btn btn-outline-secondary" href="">
-          <i class="fa-solid fa-user-gear"></i>
-        </a>
-      </div>
-
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
-        <label for"book title">Title</label><br>
-        <%= f.text_field :title %><br>
-        <label for"book body">Opinion</label><br>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book', class: "btn btn-sm btn-success"%>
-      <% end %>
-    </div>
+<div class='container px-5 px-sm-0'>
+	<div class='row'>
+    <%= render 'shared/user_info' %>
     <div class='col-md-8 offset-md-1'>
-      <h2>User</h2>
+      <h2>Users</h2>
       <table class='table table-hover table-inverse'>
         <thead>
           <tr>
