--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,48 +1,21 @@
 <div class='container px-5 px-sm-0'>
 	<div class='row'>
-	  <div class='col-md-3'>
-	    <h2>User info</h2>
-	    <!-- モックのため、固定値や未実装になっている部分があります。アプリ完成前に修正しましょう。 -->
-	    <table class='table'>
-	      <tr> 
-				  
-	        <%= image_tag 'default-image.jpg' %>  <!-- 固定値になっているので変数を使いましょう -->
-	      </tr>
-	      <tr>
-	        <th>name</th>
-	        <th>DMM太郎</th>  <!-- 固定値になっているので変数を使いましょう -->
-	      </tr>
-	      <tr>
-	        <th>introduction</th>
-	        <th></th>  <!-- 固定値になっているので変数を使いましょう -->
-	      </tr>
-	    </table>
-	    <div class='row'>
-	      <!-- 編集リンクが未実装 -->
-	    </div>
-			<h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
-        <label for"book title">Title</label><br>
-        <%= f.text_field :title %><br>
-        <label for"book body">Opinion</label><br>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book', class: "btn btn-sm btn-success"%>
-      <% end %>
-    </div>
-	  <div class='col-md-8 offset-md-1'>
-	    <h2>Books</h2>
-	    <!-- 投稿した書籍一覧表示を作成しましょう。 -->
-	    <table class='table table-hover table-inverse'>
-	      <thead>
-	        <tr>
-	          <th></th>
-	          <th>Title</th>
-	          <th>Opinion</th>
-	          <th colspan="3"></th>
-	        </tr>
-	      </thead>
-	      <tbody></tbody>
-	    </table>
-	  </div>
+    <%= render 'shared/user_info' %>
+		<div class='col-md-8 offset-md-1'>
+			<h2>Books</h2>
+			<!-- 投稿した書籍一覧表示を作成しましょう。 -->
+			<table class='table table-hover table-inverse'>
+				<thead>
+					<tr>
+						<th></th>
+						<th>Title</th>
+						<th>Opinion</th>
+						<th colspan="3"></th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
