--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -8,14 +8,18 @@
   </tr>
   <tr>
     <th>name</th>
-    <th>DMM太郎</th>  <!-- 固定値になっているので変数を使いましょう -->
+    <th><%= @user.name %></th>  <!-- 固定値になっているので変数を使いましょう -->
   </tr>
   <tr>
     <th>introduction</th>
-    <th></th>  <!-- 固定値になっているので変数を使いましょう -->
+    <th><%= @user.introduction %></th>  <!-- 固定値になっているので変数を使いましょう -->
   </tr>
 </table>
 <div class='row'>
+  <a href="">
+  <i class="fa-solid fa-house"></i> 
+<% end %>
+</div>
   <!-- 編集リンクが未実装 -->
 </div>
 <h2 class="mt-3">New book</h2>
