--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,13 +3,21 @@
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
       <%= form_with model: @user do |f| %>
-        <label for="inputName">Name</label>
-        <%= f.text_field :user_name, autofocus: true, id:"inputName", placeholder:"Name"%>
-        <label for="inputImage">Image</label>
-        <%= f.file_field :user_profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-        <label for="inputName">Introduction</label>
-        <%= f.text_field :user_introduction, autofocus: true, id:"inputIntroduction", placeholder:"Introduction"%>
-        <%= f.submit "UpdateUser" %>
+        <div class="form-grope">
+          <label for="inputName">Name</label>
+          <%= f.text_field :user_name, autofocus: true, id:"inputName", placeholder:"Name"%>
+        </div>
+        <div class="form-grope">
+          <label for="inputImage">Image</label>
+          <%= f.file_field :user_profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+        </div>
+        <div class="form-grope">
+          <label for="inputName">Introduction</label>
+          <%= f.text_field :user_introduction, autofocus: true, id:"inputIntroduction", placeholder:"Introduction"%>
+        </div>
+        <div class="form-grope">
+          <%= f.submit "UpdateUser"%>
+        </div>
       <% end %>
     </div>
   </div>
