--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -8,19 +8,19 @@
   </tr>
   <tr>
     <th>name</th>
-    <th><%= @user.name %></th>  <!-- 固定値になっているので変数を使いましょう -->
+    <th>DMM太郎
+    </th>  <!-- 固定値になっているので変数を使いましょう -->
   </tr>
   <tr>
     <th>introduction</th>
-    <th><%= @user.introduction %></th>  <!-- 固定値になっているので変数を使いましょう -->
+    <th>
+    </th>  <!-- 固定値になっているので変数を使いましょう -->
   </tr>
 </table>
 <div class='row'>
-  <a href="">
-  <i class="fa-solid fa-house"></i> 
-<% end %>
-</div>
-  <!-- 編集リンクが未実装 -->
+  <a class="edit" href="">
+    <i class="fa-solid fa-user-gear"></i>
+  </a>
 </div>
 <h2 class="mt-3">New book</h2>
 <%= form_with model: @book do |f| %>
