--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -3,31 +3,30 @@
 <!-- モックのため、固定値や未実装になっている部分があります。アプリ完成前に修正しましょう。 -->
 <table class='table'>
   <tr> 
-    
     <%= image_tag 'default-image.jpg' %>  <!-- 固定値になっているので変数を使いましょう -->
   </tr>
   <tr>
     <th>name</th>
-    <th>DMM太郎
-    </th>  <!-- 固定値になっているので変数を使いましょう -->
+    <th><%= user.name %>
+    </th>  
   </tr>
   <tr>
     <th>introduction</th>
-    <th>
-    </th>  <!-- 固定値になっているので変数を使いましょう -->
+    <th><%= user.introduction %>
+    </th>  
   </tr>
 </table>
 <div class='row'>
-  <a class="edit" href="">
+  <%= link_to edit_user_path(user) , class:"btn btn-outline-secondary btn-block" do%>
     <i class="fa-solid fa-user-gear"></i>
-  </a>
+  <% end %>
 </div>
 <h2 class="mt-3">New book</h2>
-<%= form_with model: @book do |f| %>
+<%= form_with(model: book, url: books_path, local: true) do |form| %>
   <label for"book title">Title</label><br>
-  <%= f.text_field :title %><br>
+  <%= form.text_field :title %><br>
   <label for"book body">Opinion</label><br>
-  <%= f.text_area :body %>
-  <%= f.submit 'Create Book', class: "btn btn-sm btn-success"%>
+  <%= form.text_area :body %>
+  <%= form.submit 'Create Book', class: "btn btn-sm btn-success" %>
 <% end %>
 </div>
