--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,19 +4,19 @@
       <h2>User info</h2>
       <%= form_with model: @user do |f| %>
         <div class="form-grope">
-          <label for="inputName">Name</label>
+          <label for="inputName">Name</label><br>
           <%= f.text_field :user_name, autofocus: true, id:"inputName", placeholder:"Name"%>
         </div>
         <div class="form-grope">
-          <label for="inputImage">Image</label>
+          <label for="inputImage">Image</label><br>
           <%= f.file_field :user_profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
         </div>
         <div class="form-grope">
-          <label for="inputName">Introduction</label>
+          <label for="inputName">Introduction</label><br>
           <%= f.text_field :user_introduction, autofocus: true, id:"inputIntroduction", placeholder:"Introduction"%>
         </div>
         <div class="form-grope">
-          <%= f.submit "UpdateUser"%>
+          <%= f.submit "UpdateUser" %>
         </div>
       <% end %>
     </div>
