--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,17 @@
   <%= flash[:alert] %>
 </div>
 
+<div id="error box">
+  <% if @book.present? && @book.errors.any? %>
+    <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
+
 <div class='container px-5 px-sm-0'>
 	<div class='row'>
     <%= render 'layouts/sidebar', book: @book, user: @user %>
