--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,18 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
+
+      <div id="error box">
+        <% if @user.present? && @user.errors.any? %>
+          <h2><%= @user.errors.count %>errors prohibited this book from being saved:</h2>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+      </div>
+
       <%= form_with model: @user do |f| %>
         <div class="form-grope">
           <label for="inputName">Name</label><br>
