--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,6 @@
     <%= render 'layouts/sidebar', book: @book, user: @user %>
 		<div class='col-md-8 offset-md-1'>
 			<h2>Books</h2>
-			<!-- 投稿した書籍一覧表示を作成しましょう。 -->
 			<table class='table table-hover table-inverse'>
 				<thead>
 					<tr>
@@ -29,15 +28,21 @@
 					</tr>
 				</thead>
 				<tbody>
-				<% @books.each do |book,user| %>
+				<% @books.each do |book| %>
 					<tr>
             <td>
               <span>
-                <%= image_tag user.get_profile_image(80, 80)  %>
+								<%= link_to user_path(book.id) do %>
+                <%= image_tag @user.get_profile_image(80, 80)  %>
+								<% end %>
               </span>
             </td>
 						<td>
-							<span><%= book.title %></span>
+							<span>
+								<%= link_to book_path(book.id) do %>
+								<%= book.title %>
+								<% end %>
+								</span>
             </td>
             <td>
 							<span><%= book.body %></span>
