--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,7 @@
           <%= f.text_field :user_introduction, autofocus: true, id:"inputIntroduction", placeholder:"Introduction"%>
         </div>
         <div class="form-grope">
-          <%= f.submit "UpdateUser" %>
+          <%= f.submit "UpdateUser", class:"btn btn-secondary" %>
         </div>
       <% end %>
     </div>
