--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,28 @@
 					</tr>
 				</thead>
 				<tbody>
-				</tbody>
+				<% @books.each do |book| %>
+          <tr>
+            <td>
+              <span>
+								<%= link_to user_path(book.id) do %>
+                <%= image_tag book.user.get_profile_image(80, 80)  %>
+								<% end %>
+              </span>
+            </td>
+						<td>
+							<%= link_to book_path(book.id) do %>
+							<span><%= book.title %></span>
+							<% end %>
+            </td>
+            <td>
+            </td>
+            <td>
+              <span><%= book.body %></span>
+						</td>
+					</tr>
+				<% end %>
+        </tbody>
 			</table>
 		</div>
 	</div>
