--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,8 +32,8 @@
 					<tr>
             <td>
               <span>
-								<%= link_to user_path(book.id) do %>
-                <%= image_tag @user.get_profile_image(80, 80)  %>
+								<%= link_to user_path(book.user.id) do %>
+                <%= image_tag book.user.get_profile_image(80, 80)  %>
 								<% end %>
               </span>
             </td>
