--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,15 +21,15 @@
       <%= form_with model: @user do |f| %>
         <div class="form-grope">
           <label for="inputName">Name</label><br>
-          <%= f.text_field :user_name, autofocus: true, id:"inputName", placeholder:"Name"%>
+          <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"Name"%>
         </div>
         <div class="form-grope">
           <label for="inputImage">Image</label><br>
-          <%= f.file_field :user_profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+          <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
         </div>
         <div class="form-grope">
           <label for="inputName">Introduction</label><br>
-          <%= f.text_field :user_introduction, autofocus: true, id:"inputIntroduction", placeholder:"Introduction"%>
+          <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction", placeholder:"Introduction"%>
         </div>
         <div class="form-grope">
           <%= f.submit "UpdateUser", class:"btn btn-secondary" %>
