--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,7 @@
 	<div class='row'>
     <%= render 'layouts/sidebar', book: @book, user: @user %>
 		<div class='col-md-8 offset-md-1'>
-    <h2>Books</h2>
+    <h2>Book detail</h2>
       <table class='table'>
         <tbody>
           <tr>
